POST limit via API interface
